# NIGHTERRORCO

./: .env.example  .gitignore  GENESIS_V2.md  SOBERANIA_L5.py  android_smart_organizer.py  fix.py  genesis.html  genesis_cli.py  genesis_unified.py  index.html  instrucciones_privacidad.md  landing.html  llave_master_gold_v2.py  llave_master_pydroid.py  nexus.html  ocg_core.py  plan.md  pro_genesis_bridge.py  puente_logica_n8n_workspace.py  reporte.md  requirements.txt  scanner_crypto_opt.py  scraper.py  script.js  senam_sealing_tool.html  setup_project.sh  solution.py  style.css  test_agents.py  test_bridge.py  test_core.py  test_llave_master.py  test_scraper.py  test_script.py  test_ui.py  verify_genesis.py  verify_soberania.py  verify_viral_logic.py
.github/workflows/: python-package-conda.yml
SIGMA_MASTER_RESTORED/00_Gold_Master_Orchestrators/: resurrector_opt.py
SIGMA_MASTER_RESTORED/02_SysVec_Guardian_OCG/: agents.py  index.html  prompts.py  script.js  test_genesis.py
SIGMA_MASTER_RESTORED/06_Misc_Legacy/: .gitignore  environment.yml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/cesar/arzate/llamadroid/: MainActivity.kt
genesis_v2/: __init__.py  agents.py  prompts.py
src/core/: ocg_protocol.py
tests/: test_genesis.py  test_genesis_v2.py  test_llave_master.py  test_ocg_core.py  test_ocg_protocol.py  test_ui.py
verification/: test_sentinel.py
